deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: java-app
  name: java
  namespace: shrameshwar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: java-app
    spec:
      containers:
      - image: asia-east1-docker.pkg.dev/charged-gravity-425405-j6/docker-image/java-application
        name: java-application
---
apiVersion: v1
kind: Service
metadata:
  name: java-application-service
spec:
  type: LoadBalancer
  selector:
    app: java-app
  ports:
  - name: java-service
    protocol: TCP
    port: 8080
    targetPort: 8080
